--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "user-tags",
-  "version": "1.2.9",
-  "description": "Provides an interface to register Taxonomy for Users. Tags can be assigned in user profile to categorise them and view the list in front-end.",
+  "version": "2.0.0",
+  "description": "User Tags provides an interface to register Taxonomy for Users along with a user-directory block to generate a filterable list of users.",
   "scripts": {
     "start": "gulp"
   },
